[project]
name = "navidrome-migrate"
authors = [
  {name = "Kendall Garner"}
]
description = "Migration script for Navidrome"
readme = "README.md"
license = {text = "MIT"}
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pre-commit"
]

[tool.black]

[tool.mypy]
warn_return_any = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict = true